# Simple_HTTP1.0_Server

./: .gitignore  CMakeLists.txt  README.md
db_viewer/: CMakeLists.txt
db_viewer/db/: post_requests.db
db_viewer/include/: my_ndbm.h  ncurses_ui.h
db_viewer/src/: main.c  my_ndbm.c  ncurses_ui.c
include/: conversion.h  error.h  http.h  my_ndbm.h  ncurses_ui.h  option_handler.h  server.h  util.h
src/: conversion.c  error.c  http.c  main.c  my_ndbm.c  ncurses_ui.c  option_handler.c  server.c  util.c
